# INFO0909_SMA

./: .gitignore  README.md
consensus/: README.md  config.py  main.py  pyproject.toml  requirements.txt
consensus/old/: gaussianNB.py
consensus/src/: AgentRandom.py  BERT.py  Ollama.py  SVM.py  agentTest.py  brouillon.py  gaussianNB.py  president.py  randomForest.py  reputation.py  requirements.py
results/runs/Jan30_12-45-05_LAPTOP-K47N2OO1/: events.out.tfevents.1738237505.LAPTOP-K47N2OO1.18584.0
results/runs/Jan30_12-46-10_LAPTOP-K47N2OO1/: events.out.tfevents.1738237571.LAPTOP-K47N2OO1.18276.0
results/runs/Jan30_12-57-23_LAPTOP-K47N2OO1/: events.out.tfevents.1738238243.LAPTOP-K47N2OO1.21092.0
twitter/: README.md  accounts.db  config.py  database.json  main.py  requirements.txt  spade_example.py  test.py  test_twscrape.py
twitter/src/: cleaner_agent.py  cleaning_agent.py  crawler.py  crawler_agent.py  database_agent.py  labeller_agent.py  llama.py  requirements.py  svm_agent.py
